--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "angular-gulp-boilerplate",
-  "author": "Danila Loginov <loginovdanila@gmail.com> (https://loginov.rocks)",
+  "name": "iot",
+  "author": "iot",
   "devDependencies": {
     "browser-sync": "^2.18.12",
     "browser-sync-spa": "^1.0.3",
@@ -16,6 +16,8 @@
     "gulp-flatten": "^0.3.1",
     "gulp-htmlmin": "^3.0.0",
     "gulp-inject": "^4.2.0",
+    "gulp-jasmine": "^2.4.2",
+    "gulp-karma": "^0.0.5",
     "gulp-load-plugins": "^1.5.0",
     "gulp-ng-annotate": "^2.0.0",
     "gulp-rev": "^7.1.2",
@@ -26,8 +28,17 @@
     "gulp-uglify": "^3.0.0",
     "gulp-useref": "^3.1.2",
     "gulp-util": "^3.0.8",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-ng-html2js-preprocessor": "^1.0.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-spec-reporter": "^0.0.31",
     "lodash": "^4.17.4",
     "main-bower-files": "^2.13.1",
+    "protractor-jasmine2-html-reporter": "0.0.7",
+    "underscore": "^1.8.3",
     "wiredep": "^4.0.0"
   },
   "greenkeeper": {
@@ -36,8 +47,9 @@
       "gulp-sourcemaps"
     ]
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/1oginov/Angular-Gulp-Boilerplate.git"
+  "dependencies": {
+    "gulp-protractor": "^4.1.0",
+    "karma": "^1.7.0",
+    "protractor": "^5.1.2"
   }
 }
