eslint config add

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,10 @@
   "globals": {
     "angular": true,
     "module": true,
-    "inject": true
-  }
+    "inject": true,
+    "_": true
+  },
+  "rules":{
+        "no-console":0
+    }
 }
